--- a/gdsc/templates/signup.html
+++ b/gdsc/templates/signup.html
@@ -1,63 +1,154 @@
-{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>SDGs</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="theme">
+    <meta name="author" content="Devcrud">
+    <title>theme | home</title>
+
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
-                <li><a href="Join.html">Join</a></li>
-			</ul>
-		</nav>
-	</header>
+<style>
+    .divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
+}
+.h-custom {
+height: calc(100% - 73px);
+}
+@media (max-width: 450px) {
+.h-custom {
+height: 100%;
+}
+}
+</style>
+<!-- Navbar -->
 
-        <div class="container">
-            <div class="form-container sign-in-container">
-   
-        <form action="{% url 'signup' %}" method="post">
+  <!-- Navbar -->
+  <br><br>
+    <div class="container-fluid h-custom">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+            class="img-fluid" alt="Sample image">
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <form action="{% url 'signup' %}" method="post">
             {% csrf_token %}
-        <h1>Create Account</h1>
-        <input type="text" placeholder="Username" />
-        <input type="email" placeholder="Email" />
-        <input type="tel" placeholder="Phone Number" />
-        <input type="password" placeholder="Password" />
-        <button type="submit">Sign Up</button>
-        </form>
-    </div>
-    <div class="form-container sign-up-container">
-        <form>
-        <h1>Sign In</h1>
-        <input type="text" placeholder="Username or Email" />
-        <input type="password" placeholder="Password" />
-        <a href="index.html">Forgot your password?</a>
-        <a href="{% url 'signin' %}"><button> Sign In</button></a>
-        </form>
-    </div>
-    <div class="overlay-container">
-        <div class="overlay">
-            <div class="overlay-panel overlay-right">
-        
-            <h1>Welcome Back!</h1>
-            <p>To keep connected with us please login with your personal info</p>
-           <a href="{% url 'signin' %}"> Sign In</a>
+            <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+              <p class="lead fw-normal mb-0 me-3">Sign up with</p>
+              <button type="button" class="btn btn-primary btn-floating mx-1">
+                <i class="fab fa-facebook-f"></i>
+              </button>
+  
+              <button type="button" class="btn btn-primary btn-floating mx-1">
+                <i class="fab fa-twitter"></i>
+              </button>
+  
+              <button type="button" class="btn btn-primary btn-floating mx-1">
+                <i class="fab fa-linkedin-in"></i>
+              </button>
+            </div>
+  
+            <div class="divider d-flex align-items-center my-4">
+              <p class="text-center fw-bold mx-3 mb-0">Or</p>
+            </div>
+  
+            <!-- Email input -->
+            <div class="form-outline mb-1">
+              <input type="text"  class="form-control form-control-lg"
+                placeholder="Enter your username" name="username" />
+              <label class="form-label" >User Name</label>
+            </div>
+            <!-- Email input -->
+            <div class="form-outline mb-1">
+                <input type="email"  class="form-control form-control-lg"
+                  placeholder="Enter your email" name="email" />
+                <label class="form-label" >Email</label>
+              </div>
+              <div class="form-outline mb-1">
+                <input type="text"  class="form-control form-control-lg"
+                  placeholder="Enter your first name" name="first_name" />
+                <label class="form-label" >First Name</label>
+              </div>
+              <div class="form-outline mb-1">
+                <input type="text"  class="form-control form-control-lg"
+                  placeholder="Enter your last name" name="last_name" />
+                <label class="form-label" >Last Name</label>
+              </div>
+  
+            <!-- Password input -->
+            <div class="form-outline mb-1">
+              <input type="password"  class="form-control form-control-lg"
+                placeholder="Enter password" name="password1"/>
+              <label class="form-label" >Password</label>
+            </div>
+            <div class="form-outline mb-1">
+                <input type="password"  class="form-control form-control-lg"
+                  placeholder="repeat password" name="password2"/>
+                <label class="form-label" >Repeat Password</label>
+              </div>
+    
+  
+            <div class="d-flex justify-content-between align-items-center">
+              <!-- Checkbox -->
+              <div class="form-check mb-0">
+                <input class="form-check-input me-2" type="checkbox" value="" />
+                <label class="form-check-label">
+                  Remember me
+                </label>
+              </div>
+              <a href="#!" class="text-body">Forgot password?</a>
+            </div>
+  
+            <div class="text-center text-lg-start mt-4 pt-2">
+              <button type="submit" class="btn btn-primary btn-lg"
+                style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
+              <p class="small fw-bold mt-2 pt-1 mb-0">cancel? <a href="{% url 'signin' %}"
+                  class="link-danger">login</a></p>
+            </div>
+  
+          </form>
         </div>
-        <div class="overlay-panel overlay-left">
-            <h1>Hello, Friend!</h1>
-            <p>Enter your personal details and start journey with us</p>
-            <button class="ghost" id="signUp">Sign Up</button>
-        </div>
-        </div>
+      </div>
     </div>
+    <br><br><br><br><br><br><br><br><br>
+    <div
+      class="d-flex flex-column text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+      <!-- Copyright -->
+      <div class="text-white mb-3 mb-md-0">
+        Copyright © 2020. All rights reserved.
+      </div>
+      <!-- Copyright -->
+  
+      <!-- Right -->
+      <div>
+        <a href="#!" class="text-white me-4">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#!" class="text-white me-4">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#!" class="text-white me-4">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="#!" class="text-white">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
+      <!-- Right -->
     </div>
-
-	<footer>
-		<p>&copy; 2023 Aniket</p>
-	</footer>
+  </section>
 </body>
 </html>
