--- a/gsc/static/new.css
+++ b/gsc/static/new.css
@@ -1,84 +1,132 @@
 /* Resets */
 hr {
-    margin-left: 0;
-    max-width: 40px;
+  margin-left: 0;
+  max-width: 50px;
+  color: #333;
+  font-size: 2rem;
 }
 /* Jumbotron (hero) */
 .jumbotron {
-    position: relative;
-    background: url(https://source.unsplash.com/9Y8vxVQN4o4/1920x1080) no-repeat bottom center / cover;
+  background-image: url("hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  color: #fff;
 }
-.jumbotron:before {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .5);
-}
+/* .jumbotron:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+} */
+
 .jumbotron .container {
-    padding: 75px 0;
+  padding: 75px 0;
 }
-.jumbotron h1, .jumbotron .lead {
-    color: #fff;
+.jumbotron h1,
+.jumbotron .lead {
+  color: #fff;
 }
 /* Bustom button */
 .btn-primary {
-    background: #1096fc;
-    border: 0;
+  background: #0e7712;
+  border: 0;
 }
 .btn-primary:hover {
-    background: #0384e5;
+  background: #0384e5;
 }
 /* Features */
-.sec-features .row:nth-of-type(n+2) {
-    margin-top: 160px;
+.sec-features .row:nth-of-type(n + 2) {
+  margin-top: 160px;
 }
 .sec-features .row:last-of-type {
-    margin-bottom: 160px;
+  margin-bottom: 160px;
 }
 .sec-features .feature-icon {
-    max-width: 150px;
+  max-width: 150px;
+  text-align: left;
+}
+
+/* Pricing */
+
+.sec-pricing {
+  padding: 1rem 2rem;
+}
+.sec-pricing .price-box {
+  padding: 1rem;
+  width: 100%;
 }
 /* Testimonials */
 .sec-testimonials {
-    padding-top: 128px;
-    padding-bottom: 128px;
+  padding-top: 128px;
+  padding-bottom: 128px;
 }
 /* Carousel */
 .carousel-indicators {
-    bottom: -30px;
+  bottom: -30px;
 }
 .carousel-indicators li {
-    background: rgba(33, 33, 33, .1);
+  background: rgba(33, 33, 33, 0.1);
 }
-.carousel-indicators li:focus, .carousel-indicators li:hover {
-    background: rgba(33, 33, 33, .5);
+.carousel-indicators li:focus,
+.carousel-indicators li:hover {
+  background: rgba(33, 33, 33, 0.5);
 }
 .carousel-indicators .active {
-    background: rgba(33, 33, 33, .75);
+  background: rgba(33, 33, 33, 0.75);
 }
-.carousel-control-next, .carousel-control-prev {
-    color: #212121;
+.carousel-control-next,
+.carousel-control-prev {
+  color: #212121;
 }
-.carousel-control-next:focus, .carousel-control-prev:focus, .carousel-control-next:hover, .carousel-control-prev:hover {
-    color: #111;
+.carousel-control-next:focus,
+.carousel-control-prev:focus,
+.carousel-control-next:hover,
+.carousel-control-prev:hover {
+  color: #111;
 }
 /* Footer */
 .footer {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    background: #212121;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background: #212121;
+  color: #fff !important;
 }
-.footer li:nth-of-type(n+2) {
-    margin-left: 8px;
+
+.footer i {
+  color: #fff;
+}
+.footer li {
+  list-style: none;
+  margin-right: 2rem;
+}
+.footer li:nth-of-type(n + 2) {
+  margin-left: 8px;
 }
 .footer a {
-    font-size: 18px;
-    color: rgba(255, 255, 255, .5);
-    transition: color 0.235s ease-in-out;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.5) !important;
+  transition: color 0.235s ease-in-out;
 }
-.footer a:focus, .footer a:hover {
-    color: rgba(255, 255, 255, .25);
+.footer a:focus,
+.footer a:hover {
+  color: rgba(255, 255, 255, 0.25);
+}
+fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+fieldset input,
+textarea {
+  border: none !important;
+  outline: none;
+  background-color: whitesmoke !important;
+  border-radius: 12px !important;
+}
+
+label {
+  text-align: left;
 }
