--- a/gsc/templates/calculatecarbon.html
+++ b/gsc/templates/calculatecarbon.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>SDGs</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../static/style.css">
 </head>
+
 <body>
 	<header>
 		<nav>
@@ -11,7 +13,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact</a></li>
-                <li><a href="Join.html">Join</a></li>
+				<li><a href="Join.html">Join</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -47,9 +49,10 @@
 	</main>
 
 	<footer>
-		<p>&copy; 2023 Aniket</p>
+		<p id="'date">&copy; 2023 Aniket</p>
 	</footer>
 
-	<script src="script.js"></script>
+	<script src="../static/script.js"></script>
 </body>
+
 </html>
